--- a/src/components/Start/Start.scss
+++ b/src/components/Start/Start.scss
@@ -6,7 +6,7 @@
   height: 100%;
   background-color: $white-100;
 
-  .bg {
+  &__bg {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -17,7 +17,7 @@
     z-index: 1;
   }
 
-  .content {
+  &__content {
     position: relative;
     display: flex;
     top: 50%;
@@ -27,23 +27,23 @@
     flex-direction: column;
     align-items: center;
     z-index: 2;
+  }
 
-    .logo {
-      margin-bottom: 24px;
-    }
+  &__logo {
+    margin-bottom: 24px;
+  }
 
-    .wrapper {
-      display: flex;
-      flex-direction: column;
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+  }
 
-      .title {
-        font-size: 32px;
-        font-weight: 600;
-        font-style: normal;
-        line-height: 37px;
-        text-align: center;
-        margin-bottom: 102px;
-      }
-    }
+  &__title {
+    font-size: 32px;
+    font-weight: 600;
+    font-style: normal;
+    line-height: 37px;
+    text-align: center;
+    margin-bottom: 102px;
   }
 }
