--- a/src/components/Start/Start.scss
+++ b/src/components/Start/Start.scss
@@ -39,9 +39,10 @@
   }
 
   &__title {
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
     font-size: 32px;
     font-weight: 600;
-    font-style: normal;
     line-height: 37px;
     text-align: center;
     margin-bottom: 102px;
