--- a/src/components/Game/Game.scss
+++ b/src/components/Game/Game.scss
@@ -1,22 +1,24 @@
 @import '../../assets/scss/variables.scss';
 
 .game {
+  position: fixed;
   width: 100%;
   height: 100%;
   background-color: $black-5;
 
   &__wrapper {
     padding: 21px 16px 24px;
+    margin-top: 108px;
   }
 
   &__toggle {
     position: fixed;
-    top: 21px;
-    right: 16px;
-    cursor: pointer;
     width: 16px;
     height: 14px;
-    background: $black-5;
+    top: 21px;
+    right: 16px;
+    background-color: $black-5;
+    cursor: pointer;
 
     &__bar1,
     &__bar2,
@@ -52,7 +54,7 @@
     font-size: 18px;
     line-height: 21px;
     color: $black-100;
-    margin-top: 115px;
+    text-align: center;
   }
 
   &__buttons {
