--- a/src/components/Game/Game.scss
+++ b/src/components/Game/Game.scss
@@ -1,7 +1,7 @@
 @import '../../assets/scss/variables.scss';
 
 .game {
-  position: fixed;
+  position: absolute;
   width: 100%;
   height: 100%;
   background-color: $black-5;
@@ -17,8 +17,8 @@
     height: 14px;
     top: 21px;
     right: 16px;
-    background-color: $black-5;
     cursor: pointer;
+    z-index: 1030;
 
     &__bar1,
     &__bar2,
@@ -26,7 +26,7 @@
       width: 16px;
       height: 2px;
       background: $black-100;
-      margin-bottom: 8px;
+      margin-bottom: 4px;
       transition: all .3s ease-in-out;
     }
   }
@@ -35,7 +35,7 @@
     transition: all .3s ease-in-out;
 
     .game__toggle__bar1 {
-      transform: rotate(45deg) translate(8px, 7px);
+      transform: rotate(45deg) translate(4px, 5px);
     }
 
     .game__toggle__bar2 {
@@ -43,7 +43,7 @@
     }
 
     .game__toggle__bar3 {
-      transform: rotate(-45deg) translate(7px, -6px);
+      transform: rotate(-45deg) translate(4px, -4px);
     }
   }
 
