--- a/src/components/SalutePage/SalutePage.scss
+++ b/src/components/SalutePage/SalutePage.scss
@@ -1,5 +1,12 @@
 @import '../../assets/scss/variables.scss';
 
+%title-shared {
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  color: $black-100;
+}
+
 .start {
   position: relative;
   width: 100%;
@@ -20,9 +27,11 @@
   &__content {
     position: relative;
     display: flex;
+    height: 100%;
     top: 50%;
     left: 50%;
-    padding: 16px;
+    justify-content: space-between;
+    padding: 0 16px 48px;
     transform: translate(-50%, -50%);
     flex-direction: column;
     align-items: center;
@@ -30,21 +39,28 @@
   }
 
   &__logo {
-    margin-bottom: 24px;
+    margin-top: 90px;
   }
 
   &__wrapper {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    text-align: center;
+    align-items: center;
+  }
+
+  &__suptitle {
+    @extend %title-shared;
+    font-size: 18px;
+    line-height: 21px;
+    opacity: 50%;
   }
 
   &__title {
-    font-family: 'Inter', sans-serif;
-    font-style: normal;
+    @extend %title-shared;
     font-size: 32px;
-    font-weight: 600;
     line-height: 37px;
-    text-align: center;
     margin-bottom: 102px;
   }
 }
