--- a/src/components/GamePage/GamePage.scss
+++ b/src/components/GamePage/GamePage.scss
@@ -6,48 +6,52 @@
   height: 100%;
   background-color: $black-5;
 
-  &__wrapper {
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
     padding: 21px 16px 24px;
-    margin-top: 108px;
-  }
 
-  &__toggle {
-    position: fixed;
-    width: 16px;
-    height: 14px;
-    top: 21px;
-    right: 16px;
-    cursor: pointer;
-    z-index: 1030;
-
-    &__bar1,
-    &__bar2,
-    &__bar3 {
+    .toggle {
+      position: fixed;
       width: 16px;
-      height: 2px;
-      background: $black-100;
-      margin-bottom: 4px;
+      height: 14px;
+      top: 21px;
+      right: 16px;
+      cursor: pointer;
+      z-index: 1030;
+
+      &-bar1,
+      &-bar2,
+      &-bar3 {
+        width: 16px;
+        height: 2px;
+        background: $black-100;
+        margin-bottom: 4px;
+        transition: all .3s ease-in-out;
+      }
+    }
+
+    .toggle-open {
       transition: all .3s ease-in-out;
+
+      .toggle-bar1 {
+        transform: rotate(45deg) translate(4px, 5px);
+      }
+
+      .toggle-bar2 {
+        opacity: 0;
+      }
+
+      .toggle-bar3 {
+        transform: rotate(-45deg) translate(4px, -4px);
+      }
     }
   }
 
-  &__toggle_open {
-    transition: all .3s ease-in-out;
-
-    .game__toggle__bar1 {
-      transform: rotate(45deg) translate(4px, 5px);
-    }
-
-    .game__toggle__bar2 {
-      opacity: 0;
-    }
-
-    .game__toggle__bar3 {
-      transform: rotate(-45deg) translate(4px, -4px);
-    }
-  }
-
-  &__question {
+  .question {
     font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 600;
@@ -55,9 +59,10 @@
     line-height: 21px;
     color: $black-100;
     text-align: center;
+    margin-top: 115px;
   }
 
-  &__buttons {
-    margin-top: 97px;
+  .game-buttons {
+    margin-top: 30px;
   }
 }
