--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -8,16 +8,17 @@
   left: 0;
   z-index: 1020;
 
-  &__content {
+  &-content {
     position: relative;
     height: 100%;
     width: 100%;
     max-width: 480px;
+    padding: 64px  0 32px;
     overflow-y: auto;
     z-index: 2;
   }
 
-  &__backdrop {
+  &-backdrop {
     position: absolute;
     top: 0;
     left: 0;
