--- a/src/components/PriseList/PriseList.scss
+++ b/src/components/PriseList/PriseList.scss
@@ -1,16 +1,19 @@
 @import '../../assets/scss/variables.scss';
 
-.prise__list {
+.prise-list {
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
   height: 100%;
 
-  .prise__button {
+  .prise-button {
     width: 240px;
     height: 32px;
     padding: 8px 24px;
-    margin-bottom: 8px;
+
+    &:not(:first-child) {
+      margin-bottom: 8px;
+    }
 
     font-family: 'Inter', sans-serif;
     font-style: normal;
@@ -23,11 +26,11 @@
     background-color: $white-100;
     border: 1px solid $black-40;
 
-    &_active {
+    &-active {
       border-color: $orange-100;
     }
 
-    &_earned {
+    &-earned {
       color: $black-40;
     }
   }
