--- a/src/components/SalutePage/SalutePage.scss
+++ b/src/components/SalutePage/SalutePage.scss
@@ -13,7 +13,7 @@
   height: 100%;
   background-color: $white-100;
 
-  &__bg {
+  .bg {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -24,25 +24,21 @@
     z-index: 1;
   }
 
-  &__content {
+  .content {
     position: relative;
     display: flex;
     height: 100%;
     top: 50%;
     left: 50%;
     justify-content: space-between;
-    padding: 0 16px 48px;
+    padding: 90px 16px 48px;
     transform: translate(-50%, -50%);
     flex-direction: column;
     align-items: center;
     z-index: 2;
   }
 
-  &__logo {
-    margin-top: 90px;
-  }
-
-  &__wrapper {
+  .wrapper {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -50,14 +46,14 @@
     align-items: center;
   }
 
-  &__suptitle {
+  .suptitle {
     @extend %title-shared;
     font-size: 18px;
     line-height: 21px;
     opacity: 50%;
   }
 
-  &__title {
+  .title {
     @extend %title-shared;
     font-size: 32px;
     line-height: 37px;
