--- a/src/components/GameButton/GameButton.scss
+++ b/src/components/GameButton/GameButton.scss
@@ -1,37 +1,86 @@
 @import '../../assets/scss/variables.scss';
 
 %text-shared {
-  font-family: 'Inter', sans-serif;
-  font-style: normal;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 116%;
+
+  @media (min-width: 1200px) {
+    font-size: 20px;
+  }
 }
 
 .game-button {
   position: relative;
   width: 288px;
   height: 56px;
-  padding: 20px 24px;
-  border: 1px solid $black-40;
+  padding: 10px 24px;
   transition: linear .15s border-color;
   cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  align-items: center;
+  border: 1px solid $black-40;
 
   &:not(:first-child) {
     margin-top: 8px;
   }
 
+  @media (min-width: 768px) {
+    &:not(:first-child) {
+      margin-top: 0;
+    }
+
+    &:nth-child(-n+2) {
+      margin-bottom: 16px;
+    }
+  }
+
+  @media (min-width: 1200px) {
+    width: 389px;
+    height: 72px;
+    padding: 10px 32px;
+
+    &:nth-child(-n+2) {
+      margin-bottom: 32px;
+    }
+  }
+
+  &::before,
+  &::after {
+    content: '';
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: $black-40;
+    height: 1px;
+    width: 17px;
+  }
+
+  &::before {
+    left: 0;
+    transform: translateX(-100%);
+  }
+
+  &::after {
+    right: 0;
+    transform: translateX(100%);
+  }
+
   .variant {
     @extend %text-shared;
+    width: 16px;
+    text-align: center;
+    margin-right: 8px;
     font-weight: 600;
     color: $orange-100;
-    margin-left: 24px;
   }
 
   .text {
     @extend %text-shared;
     font-weight: normal;
     color: $black-100;
-    margin-left: 8px;
   }
 
   &:hover {
