--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -13,6 +13,7 @@ html,
 body,
 #root {
   height: 100%;
+  min-height: 500px;
 }
 
 body {
@@ -20,7 +21,7 @@ body {
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: normal;
-  background-color: white;
+  background-color: $white;
   color: $black-100;
 }
 
@@ -32,7 +33,15 @@ body {
   margin: 0;
   @media (min-width: 1200px) {
     font-size: 56px;
-    line-height: 116%;
     text-align: left;
+  }
+}
+
+.content-suptitle {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 116%;
+  @media (min-width: 1200px) {
+    font-size: 32px;
   }
 }
