--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,19 +1,19 @@
-//colors
-$orange-120: #e87928;
-$orange-100: #ff8b37;
-$orange-80: #ffac70;
+// COLORS
 $orange-5: #fff3eb;
+$orange-80: #ffac70;
+$orange-100: #ff8b37;
+$orange-120: #e87928;
 
-$green-100: #47d867;
 $green-5: #e6faea;
+$green-100: #47d867;
 
-$red-100: #ec6259;
 $red-5: #fdeeed;
+$red-100: #ec6259;
 
-$black-100: #1c1c21;
-$black-40: #d0d0d8;
 $black-5: #f5f5f7;
+$black-40: #d0d0d8;
+$black-100: #1c1c21;
 
-$grey: #e5e5e5;
+$gray: #e5e5e5;
 
-$white-100: #fff;
+$white: #ffffff;
