--- a/src/components/common/Button/Button.scss
+++ b/src/components/common/Button/Button.scss
@@ -1,24 +1,27 @@
-@import '../../assets/scss/variables.scss';
+@import '../../../assets/scss/variables.scss';
 
-.button {
+.btn {
+  border: none;
+  outline: none;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 116%;
+  color: $white;
+  border-radius: 8px;
+  transition: linear .15s background-color;
+  @media (min-width: 1200px) {
+    font-size: 20px;
+  }
+}
+
+.primary-btn {
   width: 100%;
   height: 48px;
   max-width: 296px;
   padding: 16px 24px;
-
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 116%;
-  color: $white-100;
-  border-radius: 8px;
   background-color: $orange-100;
-  border: none;
-  outline: none;
-  transition: linear .15s background-color;
   @media (min-width: 1200px) {
     height: 64px;
-    font-size: 20px;
-    line-height: 116%;
   }
 
   &:hover {
