--- a/src/components/common/Modal/Modal.scss
+++ b/src/components/common/Modal/Modal.scss
@@ -1,4 +1,4 @@
-@import '../../assets/scss/variables.scss';
+@import '../../../assets/scss/variables.scss';
 
 .modal {
   position: fixed;
@@ -9,22 +9,26 @@
   z-index: 1020;
 
   &-content {
-    position: relative;
+    position: absolute;
+    top: 0;
+    right: 0;
     height: 100%;
     width: 100%;
-    max-width: 480px;
-    padding: 64px  0 32px;
-    overflow-y: auto;
+    max-width: 320px;
+    background: $black-5;
     z-index: 2;
+    > div {
+      overflow-y: auto;
+    }
   }
 
   &-backdrop {
     position: absolute;
     top: 0;
     left: 0;
-    background: $grey;
     width: 100%;
     height: 100%;
+    background: rgba(0, 0, 0, 0.5);
     z-index: 1;
   }
 }
