--- a/src/components/GamePage/GamePage.scss
+++ b/src/components/GamePage/GamePage.scss
@@ -41,7 +41,8 @@
       justify-content: center;
     }
 
-    > h1 {
+    >
+    h1 {
       font-weight: 600;
       font-size: 18px;
       line-height: 116%;
@@ -53,7 +54,7 @@
         margin: 0;
       }
       @media (min-width: 1450px) {
-        max-width: 800px;
+        max-width: 812px;
       }
     }
   }
