--- a/src/components/common/Burger/Burger.scss
+++ b/src/components/common/Burger/Burger.scss
@@ -20,6 +20,7 @@
     height: 2px;
     background: $black-100;
     margin-bottom: 4px;
+    border-radius: 5px;
     transition: all .3s ease-in-out;
   }
 }
