--- a/src/components/common/Modal/Modal.scss
+++ b/src/components/common/Modal/Modal.scss
@@ -17,7 +17,8 @@
     max-width: 320px;
     background: $black-5;
     z-index: 2;
-    > div {
+    >
+    div {
       overflow-y: auto;
     }
   }
@@ -28,7 +29,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, .5);
     z-index: 1;
   }
 }
